# dr_navigation

./: .gitignore  CMakeLists.txt  README.md  base_global_planner_params.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
carto_configs/: dr.urdf  dr_2d_localization.launch
dr_2dnav/: CMakeLists.txt  base_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  mbf_plugin.xml  package.xml
dr_2dnav/carto_configs/: dr.lua  dr_2d_localization.lua
dr_2dnav/launch/: box_filter_droid_example.launch  dr_configurations.launch  dual_ekf_navsat_example.launch  hdl_graph_slam_droid.launch  hdl_localization_droid.launch  mapviz.launch  mbf_predefined_outdoor.launch  mbf_predefined_path.launch  mbf_predefined_path2.launch  mbf_simple.launch  mbf_simple_droid.launch  move_base.launch  move_base_droid.launch  move_base_gmapping.launch  move_base_mbzirc.launch  move_base_seong.launch  move_base_seong_b.launch  navsat_transform_droid.launch  ned_to_enu.launch  omoros_core.launch  slam_gmapping_droid.launch
dr_2dnav/map/: KI_2F_map2.yaml  KI_3F_map.pgm  KI_3F_map.yaml  KI_3F_map2.pgm  KI_3F_map2.yaml
dr_2dnav/param/: base_local_planner_params.yaml  box_filter_droid.yaml  controllers (copy).yaml  controllers.yaml  controllers_b.yaml  costmap_common_params.yaml  costmap_common_params_b.yaml  costmap_common_params_backup.yaml  costmap_common_params_r1.yaml  dual_ekf_navsat.yaml  dual_ekf_navsat_backup.yaml  dwa_local_planner_params_r1.yaml  global_costmap_params.yaml  global_costmap_params_outdoor.yaml  local_costmap_params.yaml  local_costmap_params_b.yaml  local_costmap_params_backup.yaml  navsat_transform.yaml  navsat_transform_template.yaml  planners.yaml
dr_2dnav/path/: path_cityhall_indoor.txt  path_cityhall_indoor2.txt  path_cityhall_outdoor.txt
dr_2dnav/rviz/: dr_2dnav_sim.rviz  hdl_localization.rviz  hdl_localization_2.rviz  hdl_slam.rviz  move_base_flex.rviz
dr_2dnav/scripts/: .path_publisher.py.swp  KI_1F_L_path.txt  KI_1F_L_path_2.txt  cityhall_1f.txt  cmd_vel.py  map2odom_publisher.py  mbf_predefined_path.py  mbf_smach_droid.py  (+17 more)
dr_comm/: CMakeLists.txt  README.md  package.xml
dr_control/: README.md  package.xml
dr_driver/: CMakeLists.txt  package.xml
dr_navigation/: CMakeLists.txt  package.xml
dr_rc/: CMakeLists.txt  package.xml
dr_rc/include/: CommModule.h  DefineList.h  SystemModule.h
dr_rc/launch/: dr_rc.launch
dr_rc/src/: dr_rc.cpp
dr_vision/: CMakeLists.txt  README.md  package.xml
launch/: dr_2d_localization.launch  dr_configurations.launch  dr_control.launch  move_base.launch  move_base_sim.launch
map/: KI_2F_map.yaml  KI_3F_map3.pgm  KI_3F_map3.yaml  frames.gv  mymap.yaml  mymap2.yaml
rviz/: dr_2dnav_sim.rviz
src/: dr_control.cpp
(+57 files in other folders)
