<?xml version="1.0"?>
<package format="2">
    <name>dr_navigation</name>
    <version>1.0.0</version>

    <description>
      Metapackage for KAIST USRG Delivery Robot.
    </description>

    <maintainer email="hdh7485@gmail.com">Donghee Han</maintainer>
    <author>Donghee Han</author>
    <license>BSD,LGPL,LGPL (amcl)</license>  

    <buildtool_depend>catkin</buildtool_depend>

    <exec_depend>amcl</exec_depend>
    <exec_depend>base_local_planner</exec_depend>
    <exec_depend>carrot_planner</exec_depend>
    <exec_depend>clear_costmap_recovery</exec_depend>
    <exec_depend>costmap_2d</exec_depend>
    <exec_depend>dwa_local_planner</exec_depend>
    <exec_depend>fake_localization</exec_depend>
    <exec_depend>global_planner</exec_depend>
    <exec_depend>map_server</exec_depend>
    <exec_depend>move_base</exec_depend>
    <exec_depend>move_base_msgs</exec_depend>
    <exec_depend>move_slow_and_clear</exec_depend>
    <exec_depend>navfn</exec_depend>
    <exec_depend>nav_core</exec_depend>
    <exec_depend>rotate_recovery</exec_depend>
    <exec_depend>voxel_grid</exec_depend>

    <export>
        <metapackage/>
    </export>
</package>
