<?xml version="1.0"?>
<package format="1">
  <name>dr_rc</name>
  <version>0.0.0</version>

  <description>
  RC for KAIST USRG DR robot.
  </description>

  <maintainer email="hdh7485@gmail.com">Donghee Han</maintainer>
  <license>BSD</license>
 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>

</package>
